@@ -6,7 +6,7 @@ plugins {
     alias(libs.plugins.nexusPublish)
 }
 
-group = 'org.rundeck.plugins'
+group = 'com.rundeck.plugins'
 ext.pluginClassNames = 'org.rundeck.plugins.nodes.icon.IconNodeEnhancer,org.rundeck.plugins.nodes.attributes.AttributeNodeEnhancer'
 ext.pluginName = 'Attribute Node Enhancer'
 ext.publishDescription = 'Adds icons to nodes based on attribute values'
@@ -18,15 +18,16 @@ ext.developers = [
 
 scmVersion {
     tag {
-    	//defines release tags like "v1.2.3"
-        prefix = 'v'
+        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
         versionSeparator = ''
     }
     ignoreUncommittedChanges = true
+    branchVersionCreator = ['main': 'simple', 'master': 'simple']  // Don't append branch name
+    versionCreator 'simple'  // Use simple version creator (just tag name)
 }
 
 allprojects {
-    project.version = scmVersion.version
+    project.version = scmVersion.version  // Dynamic version from git tag
     apply from: "${rootDir}/gradle/java.gradle"
 }
 
@@ -50,6 +51,13 @@ jar {
 }
 test {
     useJUnitPlatform()
+    
+    // Java 17+ module access for cglib/Spock mocking
+    jvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
 }
 
 dependencies {
@@ -74,11 +82,19 @@ configurations.all {
 
 // In this section you declare where to find the dependencies of your project
 repositories {
+    mavenLocal()
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+        content {
+            includeGroup('org.rundeck')
+        }
+    }
     mavenCentral()
 }
 
 nexusPublishing {
-    packageGroup = 'org.rundeck.plugins'
+    packageGroup = 'com.rundeck.plugins'
     repositories {
         sonatype {
             nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
